src/objects/Process__c.object
<CustomObject>
    <fields>
        <fullName>Corporate_Request_Link__c</fullName>
        <description>URL to log corporate requests from Sharepoint</description>
        <formula>&quot;https://mstr.lightning.force.com/lightning/cmp/c__URL_CreateRecordCmp?c__objectName=Case&amp;c__recordtypeid=01244000000RcYt&amp;c__Process=&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Request Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Request_Log_Link__c</fullName>
        <description>URL for the process log report linked in Sharepoint.</description>
        <formula>&quot;https://mstr.lightning.force.com/lightning/r/Report/00O44000003cgsp/view?fv1=&quot;&amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Request Log Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <description>Short field for the Process Name</description>
        <formula>LEFT( Name , 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Description</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Process_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Processes_with_URLs</fullName>
        <columns>NAME</columns>
        <columns>Process_Owner__c</columns>
        <columns>Corporate_Request_Link__c</columns>
        <columns>Corporate_Request_Log_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>Processes with URLs</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UC_Codes_Process</fullName>
        <filterScope>Queue</filterScope>
        <label>UC Codes</label>
        <queue>UC_Codes</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Process</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>